--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,14 +64,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_speed" />
 
-    <ImageView
-        android:layout_width="400dp"
-        android:layout_height="400dp"
-        android:layout_marginBottom="10dp"
-        android:src="@drawable/mouse1"
-        app:layout_constraintBottom_toTopOf="@+id/start_game_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+<!--    <ImageView-->
+<!--        android:layout_width="400dp"-->
+<!--        android:layout_height="400dp"-->
+<!--        android:layout_marginBottom="10dp"-->
+<!--        android:src="@drawable/mouse1"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/start_game_button"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent" />-->
 
 
     <Button
